--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "seed": "bun run src/db/seed.ts"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "elysia": "latest",
